--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-02  Bruno Haible  <haible@clisp.cons.org>
+
+	* linebreak.c (iconv_string_keeping_offsets): Work around a glibc-2.1
+	bug.
+
 2001-04-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.37 released.
