--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-30  Bruno Haible  <haible@clisp.cons.org>
+
+	* et.po: New file, from Ivar Smolin <okul@trenet.ee>.
+
 2001-04-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.37 released.
