--- a/intl/ChangeLog
+++ b/intl/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-30  Bruno Haible  <haible@clisp.cons.org>
+
+	* dcigettext.c (getuid, getgid, geteuid, getegid): Provide default
+	definitions. Needed for mingw32.
+
 2001-04-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.37 released.
