--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-06  Bruno Haible  <haible@clisp.cons.org>
+
+	* sl.po: Update from
+	Primož Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>.
+
 2001-04-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* et.po: New file, from Ivar Smolin <okul@trenet.ee>.
