--- a/misc/ChangeLog
+++ b/misc/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-11  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettextize.in: Tell the user about glibc21.m4.
+
 2001-04-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.37 released.
