--- a/po/et.po
+++ b/po/et.po
@@ -322,10 +322,12 @@ msgstr ""
 "      --omit-header           keelab päises `msgid \"\"' kirje\n"
 "  -o, --output=FAIL           kirjutab väljundi määratud faili\n"
 "  -p, --output-dir=KATALOOG   väljundfailid pannakse määratud kataloogi\n"
-"  -s, --sort-output           väljund sorteeritakse ja duplikaadid kustutatakse\n"
+"  -s, --sort-output           väljund sorteeritakse ja duplikaadid "
+"kustutatakse\n"
 "      --strict                kirjutab .po faili, järgides ranget Uniforum\n"
 "                              meetodit\n"
-"  -T, --trigraphs             mõistab sisendis olevaid ANSI C stiilis kolme-\n"
+"  -T, --trigraphs             mõistab sisendis olevaid ANSI C stiilis "
+"kolme-\n"
 "                              sümbolilisi erimärke\n"
 "  -u, --unique                lühend võtmele --less-than=2, määrab, et\n"
 "                              trükitakse ainult unikaalsed stringid.\n"
@@ -403,7 +405,7 @@ msgstr[1] ", %d kahtlast tõlget"
 #: src/msgfmt.c:370
 #, c-format
 msgid ", %d untranslated message"
-msgid_plural ", %d untranslated message"
+msgid_plural ", %d untranslated messages"
 msgstr[0] ", %d tõlkimata teade"
 msgstr[1] ", %d tõlkimata teadet"
 
@@ -633,8 +635,8 @@ msgid ""
 "%sRead %ld old + %ld reference, merged %ld, fuzzied %ld, missing %ld, "
 "obsolete %ld.\n"
 msgstr ""
-"%sLoetud %ld vana + %ld viidet, ühendatud %ld, kahtlaseid %ld, "
-"puuduvaid %ld, vananenuid %ld.\n"
+"%sLoetud %ld vana + %ld viidet, ühendatud %ld, kahtlaseid %ld, puuduvaid %"
+"ld, vananenuid %ld.\n"
 
 #: src/msgmerge.c:806
 msgid " done.\n"
@@ -1046,4 +1048,3 @@ msgstr ""
 #, c-format
 msgid "language `%s' unknown"
 msgstr "tundmatu keel `%s'"
-
