--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-21  Bruno Haible  <haible@clisp.cons.org>
+
+	* xgettext.c (construct_header): Replace 8-bit with 8bit.
+
 2001-04-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.37 released.
