--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-21  Bruno Haible  <haible@clisp.cons.org>
+
+	* tr.po: Update from Nilgün Belma Bugüner <nilgun@technologist.com>.
+
 2001-05-18  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.in.in (dist2): Don't assume $(srcdir) = ".". Distribute
