--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext 0.10.35\n"
+"Project-Id-Version: GNU gettext 0.10.35\n"
 "POT-Creation-Date: 2001-04-18 22:38+0200\n"
 "PO-Revision-Date: 2001-05-20 02:20+0300\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@technologist.com>\n"
