--- a/misc/ChangeLog
+++ b/misc/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-21  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* gettextize.in: Check for configure.ac in addition to configure.in.
+
 2001-05-12  Paul Eggert  <eggert@twinsun.com>
 
 	* gettextize.in: Replace "test -e" with "test -f", since the 'test'
