--- a/m4/ChangeLog
+++ b/m4/ChangeLog
@@ -1,5 +1,9 @@
 2001-05-23  Bruno Haible  <haible@clisp.cons.org>
 
+	* gettext-0.10.38 released.
+
+2001-05-23  Bruno Haible  <haible@clisp.cons.org>
+
 	* iconv.m4 (AM_ICONV): Accept --with-libiconv-prefix option.
 
 2001-05-17  Bruno Haible  <haible@clisp.cons.org>
@@ -24,6 +28,7 @@
 	* glibc21.m4: New file, from fileutils-4.1.
 	* gettext.m4 (AM_GNU_GETTEXT): Require jm_GLIBC21.
 	* Makefile.am (EXTRA_DIST): Add glibc21.m4.
+	(aclocal_DATA): Add glibc21.m4.
 
 2001-05-04  Bruno Haible  <haible@clisp.cons.org>
 
