--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,5 +1,9 @@
 2001-05-23  Bruno Haible  <haible@clisp.cons.org>
 
+	* gettext-0.10.38 released.
+
+2001-05-23  Bruno Haible  <haible@clisp.cons.org>
+
 	* linebreak.c (mbs_possible_linebreaks): Avoid broken EUC-KR
 	conversion in glibc-2.1.
 	(mbs_width_linebreaks): Likewise.
