--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-23  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext-0.10.38 released.
+
 2001-05-21  Bruno Haible  <haible@clisp.cons.org>
 
 	* tr.po: Update from Nilgün Belma Bugüner <nilgun@technologist.com>.
