--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,9 @@
 2001-05-23  Bruno Haible  <haible@clisp.cons.org>
 
+	* gettext-0.10.38 released.
+
+2001-05-23  Bruno Haible  <haible@clisp.cons.org>
+
 	* write-po.c (wrap): Avoid broken EUC-KR conversion in glibc-2.1.
 
 2001-05-21  Bruno Haible  <haible@clisp.cons.org>
