--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,25 @@
+2001-06-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* no.po: Update from Trond Endrestøl <endrestol@hotmail.com>.
+
+2001-06-08  Bruno Haible  <haible@clisp.cons.org>
+
+	* ko.po: Update from Changwoo Ryu <cwryu@debian.org>.
+	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
+	* ru.po: Update from Oleg S. Tihonov <tihonov@ffke-campus.mipt.ru>.
+	* zh.po: Update from Yuan-Chung Cheng <platin@ms.ccafps.khc.edu.tw>.
+
+2001-05-28  Bruno Haible  <haible@clisp.cons.org>
+
+	* sl.po: Update from
+	Primož Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>.
+	* sv.po: Update from Jan Djärv <Jan.Djarv@mbox200.swipnet.se>.
+	* zh.po: Update from Yuan-Chung Cheng <platin@ms.ccafps.khc.edu.tw>.
+
+2001-05-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* tr.po: Update from Nilgün Belma Bugüner <nilgun@technologist.com>.
+
 2001-05-23  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.38 released.
