--- a/po/no.po
+++ b/po/no.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext 0.10.12\n"
+"Project-Id-Version: GNU gettext 0.10.37\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 1999-08-06 22:38+02:00\n"
+"PO-Revision-Date: 2001-05-09 02:08+02:00\n"
 "Last-Translator: Trond Endrestøl <endrestol@hotmail.com>\n"
 "Language-Team: Norwegian-bokmål <no@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -79,9 +79,8 @@ msgstr "%s: flagg «-W %s» tillater ikke et argument\n"
 
 #: lib/obstack.c:474 lib/xmalloc.c:86 src/po.c:308 src/po.c:381 src/po.c:389
 #: src/po.c:395 src/po.c:415 src/po.c:422 src/po.c:427 src/po.c:444
-#, fuzzy
 msgid "memory exhausted"
-msgstr "Minnet oppbrukt"
+msgstr "minnet oppbrukt"
 
 # Hva skal MERCHANTABILITY og FITNESS FOR PARTICULAR PURPOSE oversettes med?
 # Er denne oversettelsen grei nok?
@@ -95,7 +94,8 @@ msgid ""
 msgstr ""
 "Copyright (C) %s Free Software Foundation, Inc.\n"
 "Dette er fri pogramvare; se kildekoden for kopieringsbetingelser.  Det finnes\n"
-"INGEN garanti; ikke engang for SALGBARHET eller SKIKKETHET FOR ET BESTEMT FORMÅL.\n"
+"INGEN garanti; ikke engang for SALGBARHET eller SKIKKETHET FOR ET BESTEMT\n"
+"FORMÅL.\n"
 
 #: src/gettext.c:145 src/msgcmp.c:145 src/msgcomm.c:284 src/msgfmt.c:275
 #: src/msgmerge.c:260 src/msgunfmt.c:175 src/ngettext.c:125 src/xgettext.c:393
@@ -141,7 +141,7 @@ msgstr ""
 "                            fra TEXTDOMAIN\n"
 
 #: src/gettext.c:262
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "\n"
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
@@ -153,13 +153,14 @@ msgid ""
 "found in the selected catalog are translated.\n"
 "Standard search directory: %s\n"
 msgstr ""
+"\n"
 "Dersom TEXTDOMAIN-parameteren ikke er gitt, blir domenet valgt fra\n"
 "miljøvariabelen TEXTDOMAIN.  Dersom meldingskatalogen ikke finnes i den\n"
-"vanlige filkatalogen, kan en annen filkatalog spesifiseres ved hjelp av\n"
+"vanlige katalogen, kan en annen katalog spesifiseres ved hjelp av\n"
 "miljøvariabelen TEXTDOMAIN.\n"
 "Når flagget -s blir brukt, oppfører programmet seg som kommandoen «echo».\n"
 "Programmet kopierer imidlertid ikke sine argumenter til standard ut.  I\n"
-"stedet blir meldinger i den valgte katalogen oversatt.\n"
+"stedet blir funne meldinger i den valgte katalogen oversatt.\n"
 "Standard søkekatalog er: %s\n"
 
 #: src/gettext.c:272 src/msgcmp.c:196 src/msgcomm.c:424 src/msgfmt.c:414
@@ -222,10 +223,11 @@ msgid "warning: this message is not used"
 msgstr "advarsel: denne meldingen er ikke brukt"
 
 #: src/msgcmp.c:283 src/po-lex.c:103
-#, fuzzy, c-format
+#, c-format
 msgid "found %d fatal error"
 msgid_plural "found %d fatal errors"
 msgstr[0] "fant %d fatale feil"
+msgstr[1] "fant %d fatale feil"
 
 #: src/msgcmp.c:356 src/msgfmt.c:667 src/msgmerge.c:512 src/xgettext.c:1157
 msgid "duplicate message definition"
@@ -286,7 +288,6 @@ msgstr ""
 "  -h, --help                     vise denne hjelpen og avslutte\n"
 
 #: src/msgcomm.c:394
-#, fuzzy
 msgid ""
 "  -i, --indent                   write the .po file using indented style\n"
 "      --no-location              do not write '#: filename:line' lines\n"
@@ -374,22 +375,25 @@ msgid "error while opening \"%s\" for writing"
 msgstr "feil under åpning av «%s» for skriving"
 
 #: src/msgfmt.c:360
-#, fuzzy, c-format
+#, c-format
 msgid "%d translated message"
 msgid_plural "%d translated messages"
-msgstr[0] "%d oversatte meldinger"
+msgstr[0] "%d oversatt melding"
+msgstr[1] "%d oversatte meldinger"
 
 #: src/msgfmt.c:365
-#, fuzzy, c-format
+#, c-format
 msgid ", %d fuzzy translation"
 msgid_plural ", %d fuzzy translations"
-msgstr[0] ", %d antatte oversettelser"
+msgstr[0] ", %d antatt oversettelse"
+msgstr[1] ", %d antatte oversettelser"
 
 #: src/msgfmt.c:370
-#, fuzzy, c-format
+#, c-format
 msgid ", %d untranslated message"
 msgid_plural ", %d untranslated messages"
-msgstr[0] ", %d uoversatte meldinger"
+msgstr[0] ", %d uoversatt melding"
+msgstr[1] ", %d uoversatte meldinger"
 
 #: src/msgfmt.c:392
 #, c-format, no-wrap
@@ -441,11 +445,13 @@ msgid "while creating hash table"
 msgstr "mens hash-tabellen ble laget"
 
 #: src/msgfmt.c:479
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s: warning: PO file header missing, fuzzy, or invalid\n"
 "%*s  warning: charset conversion will not work"
-msgstr "%s: advarselL: kildefil har antatte oversettelser"
+msgstr ""
+"%s: advarsel: PO-filheader mangler, fuzzy, eller ugyldig\n"
+"%*s  advarsel: tegnsettkonvertering vil ikke virke"
 
 #: src/msgfmt.c:503
 #, c-format
@@ -497,47 +503,42 @@ msgid "%s: warning: source file contains fuzzy translation"
 msgstr "%s: advarselL: kildefil har antatte oversettelser"
 
 #: src/msgfmt.c:930
-#, fuzzy
 msgid "`msgid' and `msgid_plural' entries do not both begin with '\\n'"
-msgstr "«msgid»- og «msgstr»-verdiene begynner ikke begge med `\\n'"
+msgstr "«msgid»- og «msgid_plural»-innslagene begynner ikke med `\\n'"
 
 #: src/msgfmt.c:938
-#, fuzzy, c-format
+#, c-format
 msgid "`msgid' and `msgstr[%u]' entries do not both begin with '\\n'"
-msgstr "«msgid»- og «msgstr»-verdiene begynner ikke begge med `\\n'"
+msgstr "«msgid»- og «msgstr[%u]»-innslagene begynner ikke med `\\n'"
 
 #: src/msgfmt.c:948
-#, fuzzy
 msgid "`msgid' and `msgstr' entries do not both begin with '\\n'"
-msgstr "«msgid»- og «msgstr»-verdiene begynner ikke begge med `\\n'"
+msgstr "«msgid»- og «msgstr»-innslagene begynner ikke med `\\n'"
 
 #: src/msgfmt.c:963
-#, fuzzy
 msgid "`msgid' and `msgid_plural' entries do not both end with '\\n'"
-msgstr "«msgid»- og «msgstr»-verdiene slutter ikke begge med `\\n'"
+msgstr "«msgid»- og «msgstr[%u]»-innslagene slutter ikke med `\\n'"
 
 #: src/msgfmt.c:971
-#, fuzzy, c-format
+#, c-format
 msgid "`msgid' and `msgstr[%u]' entries do not both end with '\\n'"
-msgstr "«msgid»- og «msgstr»-verdiene slutter ikke begge med `\\n'"
+msgstr "«msgid»- og «msgstr[%u]»-innslagene slutter ikke med `\\n'"
 
 #: src/msgfmt.c:981
-#, fuzzy
 msgid "`msgid' and `msgstr' entries do not both end with '\\n'"
-msgstr "«msgid»- og «msgstr»-verdiene slutter ikke begge med `\\n'"
+msgstr "«msgid»- og «msgstr»-innslagene slutter ikke med `\\n'"
 
 #: src/msgfmt.c:997
 msgid "number of format specifications in `msgid' and `msgstr' does not match"
-msgstr ""
-"antall format-spesifiseringer i «msgid» og «msgstr» stemmer ikke overens"
+msgstr "antallet format-spesifiseringer i «msgid» og «msgstr» stemmer ikke"
 
 #: src/msgfmt.c:1014
-#, fuzzy, c-format
+#, c-format
 msgid "format specifications for argument %lu are not the same"
-msgstr "format-spesifiseringene for argument %u er ulike"
+msgstr "format-spesifiseringene for argument %lu er ulike"
 
 #: src/msgmerge.c:320
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] def.po ref.po\n"
 "Mandatory arguments to long options are mandatory for short options too.\n"
@@ -559,6 +560,8 @@ msgid ""
 msgstr ""
 "Bruksmåte: %s [FLAGG] def.po ref.po\n"
 "Obligatoriske argumenter til lange flagg er også obligatoriske for korte flagg.\n"
+"  -C  --compendium=FIL        ytterligere bibliotek med oversettelser,\n"
+"                              kan bli angitt mer enn en gang\n"
 "  -D, --directory=KATALOG     legge KATALOG til søkelisten over innfiler\n"
 "  -e, --no-escape             ikke bruke C-escapekoder i utdata (standard)\n"
 "  -E, --escape                bruk C-escaper i utdata, ingen utvidede tegn\n"
@@ -600,13 +603,13 @@ msgstr ""
 "er spesifisert.\n"
 
 #: src/msgmerge.c:799
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%sRead %ld old + %ld reference, merged %ld, fuzzied %ld, missing %ld, "
 "obsolete %ld.\n"
 msgstr ""
-"%sLeste %d gamle + %d referanser, flettet %d, antok %d, mangler %d,foreldete "
-"%d.\n"
+"%sLeste %ld gamle + %ld referanser, flettet %ld, antok %ld, mangler %ld, "
+"foreldete %ld.\n"
 
 #: src/msgmerge.c:806
 msgid " done.\n"
@@ -670,9 +673,9 @@ msgid "seek \"%s\" offset %ld failed"
 msgstr "«seek» «%s» posisjon %ld mislyktes"
 
 #: src/msgunfmt.c:332
-#, fuzzy, c-format
+#, c-format
 msgid "file \"%s\" contains a not NUL terminated string"
-msgstr "filen «%s» er ikke i GNU .mo-format"
+msgstr "filen «%s» inneholder en ikke-NUL-terminert streng"
 
 #: src/msgunfmt.c:377
 #, c-format
@@ -680,7 +683,7 @@ msgid "file \"%s\" is not in GNU .mo format"
 msgstr "filen «%s» er ikke i GNU .mo-format"
 
 #: src/ngettext.c:209
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] [TEXTDOMAIN] MSGID MSGID-PLURAL COUNT\n"
 "  -d, --domain=TEXTDOMAIN   retrieve translated message from TEXTDOMAIN\n"
@@ -692,18 +695,18 @@ msgid ""
 "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
 "  COUNT                     choose singular/plural form based on this value\n"
 msgstr ""
-"Bruk: %s [FLAGG] [[[TEXTDOMAIN] MSGID] | [-s [MSGID]...]]\n"
+"Bruk: %s [FLAGG] [TEXTDOMAIN] MSGID MSGID-PLURAL COUNT\n"
 "  -d, --domain=TEXTDOMAIN   hent oversatte meldinger fra TEXTDOMAIN\n"
 "  -e                        slå på ekspandering av noen escape-sekvenser\n"
 "  -E                        (tillatt av kompatibilitetshensyn)\n"
 "  -h, --help                vis denne hjelpeteksten og avslutt\n"
-"  -n                        undertrykk etterfølgende linjeskift\n"
 "  -v, --version             vis programversjon og avslutt\n"
-"  [TEXTDOMAIN] MSGID        hent oversatt melding som stemmer overens med MSGID\n"
-"                            fra TEXTDOMAIN\n"
+"  [TEXTDOMAIN]              hent oversatt melding fra TEXTDOMAIN\n"
+"  MSGID MSGID-PLURAL        oversett MSGID (entall) / MSGID-PLURAL (flertall)\n"
+"  COUNT                     velg entalls-/flertallsform basert på denne verdien\n"
 
 #: src/ngettext.c:221
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "\n"
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
@@ -712,32 +715,28 @@ msgid ""
 "variable TEXTDOMAINDIR.\n"
 "Standard search directory: %s\n"
 msgstr ""
+"\n"
 "Dersom TEXTDOMAIN-parameteren ikke er gitt, blir domenet valgt fra\n"
 "miljøvariabelen TEXTDOMAIN.  Dersom meldingskatalogen ikke finnes i den\n"
-"vanlige filkatalogen, kan en annen filkatalog spesifiseres ved hjelp av\n"
-"miljøvariabelen TEXTDOMAIN.\n"
-"Når flagget -s blir brukt, oppfører programmet seg som kommandoen «echo».\n"
-"Programmet kopierer imidlertid ikke sine argumenter til standard ut.  I\n"
-"stedet blir meldinger i den valgte katalogen oversatt.\n"
+"vanlige katalogen, kan en annen katalog spesifiseres ved hjelp av\n"
+"miljøvariabelen TEXTDOMAINDIR.\n"
 "Standard søkekatalog er: %s\n"
 
 #: src/open-po.c:64
 msgid "<stdin>"
-msgstr ""
+msgstr "<stdin>"
 
 #: po-gram-gen.y:87
 msgid "inconsistent use of #~"
-msgstr ""
+msgstr "inkonsistent bruk av #~"
 
 #: po-gram-gen.y:168
-#, fuzzy
 msgid "missing `msgstr[]' section"
-msgstr "mangler «msgstr»-seksjon"
+msgstr "mangler «msgstr[]»-seksjon"
 
 #: po-gram-gen.y:176
-#, fuzzy
 msgid "missing `msgid_plural' section"
-msgstr "mangler «msgstr»-seksjon"
+msgstr "mangler «msgid_plural»-seksjon"
 
 #: po-gram-gen.y:183
 msgid "missing `msgstr' section"
@@ -745,11 +744,11 @@ msgstr "mangler «msgstr»-seksjon"
 
 #: po-gram-gen.y:228
 msgid "first plural form has nonzero index"
-msgstr ""
+msgstr "første flertallsform har en ikke-null indeks"
 
 #: po-gram-gen.y:230
 msgid "plural form has wrong index"
-msgstr ""
+msgstr "flertallsform har feil indeks"
 
 #. CAUTION: If you change this macro, you must also make identical
 #. changes to the function of the same name in src/po-lex.c
@@ -764,7 +763,6 @@ msgid "keyword \"%s\" unknown"
 msgstr "nøkkelord «%s» ukjent"
 
 #: src/po-lex.c:377
-#, fuzzy
 msgid "invalid control sequence"
 msgstr "ulovlig kontrollsekvens"
 
@@ -777,29 +775,30 @@ msgid "end-of-line within string"
 msgstr "slutt-på-linje inne i streng"
 
 #: src/po-lex.c:528 src/write-po.c:291 src/write-po.c:373
-#, fuzzy
 msgid "invalid multibyte sequence"
-msgstr "ulovlig kontrollsekvens"
+msgstr "ulovlig multibytesekvens"
 
 #: src/po.c:302 src/po.c:374 src/po.c:409 src/po.c:439
 #, c-format
 msgid "%s: warning: "
-msgstr ""
+msgstr "%s: advarsel: "
 
 #: src/po.c:303
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Charset \"%s\" is not a portable encoding name.\n"
 "Message conversion to user's charset might not work.\n"
-msgstr "%s: advarselL: kildefil har antatte oversettelser"
+msgstr ""
+"Tegnsettet \"%s\" er ikke et portabelt innkodingsnavn.\n"
+"Meldingskonvertering til brukerens tegnsett kan ikke virke.\n"
 
 #: src/po.c:370 src/po.c:405
 msgid "Continuing anyway, expect parse errors."
-msgstr ""
+msgstr "Fortsetter likevel, forvent parsefeil."
 
 #: src/po.c:372
 msgid "Continuing anyway."
-msgstr ""
+msgstr "Fortsetter likevel."
 
 #: src/po.c:375
 #, c-format
@@ -807,17 +806,21 @@ msgid ""
 "Charset \"%s\" is not supported. %s relies on iconv(),\n"
 "and iconv() does not support \"%s\".\n"
 msgstr ""
+"Tegnsettet \"%s\" er ikke støttet. %s er avhengig av iconv(),\n"
+"og iconv() støtter ikke \"%s\".\n"
 
 #: src/po.c:385 src/po.c:418
 msgid ""
 "Installing GNU libiconv and then reinstalling GNU gettext\n"
 "would fix this problem.\n"
 msgstr ""
+"Installasjon av GNU libiconv og deretter reinstallasjon av GNU gettext\n"
+"vil rette dette problemet.\n"
 
 #: src/po.c:393 src/po.c:425
 #, c-format
 msgid "%s\n"
-msgstr ""
+msgstr "%s\n"
 
 #: src/po.c:410
 #, c-format
@@ -825,13 +828,16 @@ msgid ""
 "Charset \"%s\" is not supported. %s relies on iconv().\n"
 "This version was built without iconv().\n"
 msgstr ""
+"Tegnsettet \"%s\" er ikke støttet. %s er avhengig av iconv().\n"
+"Denne versjonen ble blygget uten iconv().\n"
 
 #: src/po.c:440
-#, fuzzy
 msgid ""
 "Charset missing in header.\n"
 "Message conversion to user's charset will not work.\n"
-msgstr "%s: advarselL: kildefil har antatte oversettelser"
+msgstr ""
+"Tegnsettet mangler i headeren.\n"
+"Meldingskonvertering til brukerens tegnsett kan ikke virke.\n"
 
 #: src/write-po.c:322
 #, c-format
@@ -876,7 +882,7 @@ msgstr ""
 
 #: src/xgettext.c:378
 msgid "xgettext cannot work without keywords to look for"
-msgstr ""
+msgstr "xgettext kan ikke arbeide uten å finne nøkkelord"
 
 #: src/xgettext.c:484
 #, c-format
@@ -923,7 +929,7 @@ msgstr ""
 "  -F, --sort-by-file             sorter utdata etter fillokasjon\n"
 
 #: src/xgettext.c:540
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "  -h, --help                     display this help and exit\n"
 "  -i, --indent                   write the .po file using indented style\n"
@@ -949,7 +955,7 @@ msgstr ""
 "      --no-location              ikke skriv ut «#: filnavn:linje»-linjer\n"
 
 #: src/xgettext.c:552
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "  -n, --add-location             generate '#: filename:line' lines (default)\n"
 "      --omit-header              don't write header with `msgid \"\"' entry\n"
@@ -978,44 +984,16 @@ msgstr ""
 "Dersom INNFIL er -, lese standard inn.\n"
 
 #: src/xgettext.c:914
-#, fuzzy, c-format
+#, c-format
 msgid "%s:%d: warning: keyword nested in keyword arg"
-msgstr "%s:%d: advarsel: uavsluttet strengliteral"
+msgstr "%s:%d: advarsel: nøkkelord nøstet i et annet nøkkelords argument"
 
 #: src/xgettext.c:924
 #, c-format
 msgid "%s:%d: warning: keyword between outer keyword and its arg"
-msgstr ""
+msgstr "%s:%d: advarsel: nøkkelord mellom ytre nøkkelord og dets argument"
 
 #: src/xgettext.c:1420
 #, c-format
 msgid "language `%s' unknown"
 msgstr "språket «%s» er ukjent"
-
-#, fuzzy
-#~ msgid ""
-#~ "%s: warning: charset \"%s\" is not supported by iconv%s\n"
-#~ "%*s  warning: consider installing GNU libiconv and then\n"
-#~ "%*s           reinstalling GNU gettext"
-#~ msgstr "%s: advarselL: kildefil har antatte oversettelser"
-
-#, fuzzy
-#~ msgid ""
-#~ "%s: warning: charset \"%s\" is not supported without iconv%s\n"
-#~ "%*s  warning: consider installing GNU libiconv and then\n"
-#~ "%*s           reinstalling GNU gettext"
-#~ msgstr "%s: advarselL: kildefil har antatte oversettelser"
-
-#~ msgid "Memory exhausted"
-#~ msgstr "Minnet oppbrukt"
-
-#~ msgid "%s: warning: no header entry found"
-#~ msgstr "%s: advarsel: fant ikke filhode"
-
-#, fuzzy
-#~ msgid "this is the location of the first definition"
-#~ msgstr "... dette er lokasjonen til den første definisjonen"
-
-#, fuzzy
-#~ msgid "duplicate message ID"
-#~ msgstr "duplisert definisjon av melding"
