--- a/po/sl.po
+++ b/po/sl.po
@@ -2,11 +2,13 @@
 # Copyright (C) 1995, 1996, 1997, 1998, 2000, 2001 Free Software Foundation, Inc.
 # Primo¾ Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>, 1996, 1999, 2000, 2001.
 #
+# $Id: gettext-0.10.38.sl.po,v 1.2 2001/05/26 15:41:05 peterlin Exp $
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext 0.10.37\n"
+"Project-Id-Version: GNU gettext 0.10.38\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 2001-05-07 20:51+02:00\n"
+"PO-Revision-Date: 2001-05-26 17:40+02:00\n"
 "Last-Translator: Primoz Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
