--- a/doc/gettext.texi
+++ b/doc/gettext.texi
@@ -2060,7 +2060,7 @@ are limited to those supported by both GNU @code{libc} and GNU
 @code{CP932}, @code{CP949}, @code{CP950}, @code{CP1250}, @code{CP1251},
 @code{CP1252}, @code{CP1253}, @code{CP1254}, @code{CP1255}, @code{CP1256},
 @code{CP1257}, @code{GB2312}, @code{EUC-JP}, @code{EUC-KR}, @code{EUC-TW},
-@code{BIG5}, @code{BIG5HKSCS}, @code{GBK}, @code{GB18030}, @code{SJIS},
+@code{BIG5}, @code{BIG5-HKSCS}, @code{GBK}, @code{GB18030}, @code{SHIFT_JIS},
 @code{JOHAB}, @code{TIS-620}, @code{VISCII}, @code{UTF-8}.
 
 @c This data is taken from glibc/localedata/SUPPORTED.
@@ -2089,7 +2089,7 @@ corresponding languages.
 @item @code{CP1251} for Bulgarian, Byelorussian,
 @item @code{GB2312}, @code{GBK}, @code{GB18030}
  for simplified writing of Chinese,
-@item @code{BIG5}, @code{BIG5HKSCS}
+@item @code{BIG5}, @code{BIG5-HKSCS}
  for traditional writing of Chinese,
 @item @code{EUC-JP} for Japanese,
 @item @code{EUC-KR} for Korean,
@@ -3733,7 +3733,7 @@ Languages with this property include:
 @item Finno-Ugric family
 Hungarian
 @item Asian family
-Japanese
+Japanese, Korean
 @item Turkic/Altaic family
 Turkish
 @end table
@@ -3762,7 +3762,7 @@ Greek
 @item Semitic family
 Hebrew
 @item Romanic family
-Italian, Spanish
+Italian, Portuguese, Spanish
 @item Artificial
 Esperanto
 @end table
@@ -3779,7 +3779,22 @@ Languages with this property include:
 
 @table @asis
 @item Romanic family
-French
+French, Brazilian Portuguese
+@end table
+
+@item Three forms, special case for zero
+The header entry would be:
+
+@smallexample
+Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : 2;
+@end smallexample
+
+@noindent
+Languages with this property include:
+
+@table @asis
+@item Baltic family
+Latvian
 @end table
 
 @item Three forms, special cases for one and two
@@ -3828,7 +3843,7 @@ Languages with this property include:
 
 @table @asis
 @item Slavic family
-Czech, Russian, Slovak, Ukrainian
+Croatian, Czech, Russian, Slovak, Ukrainian
 @end table
 
 @item Three forms, special case for one and some numbers ending in 2, 3, or 4
@@ -3839,8 +3854,6 @@ Plural-Forms: nplurals=3; \
     plural=n==1 ? 0 : \
            n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;
 @end smallexample
-
-(Continuation in the next line is possible.)
 
 @noindent
 Languages with this property include:
