--- a/doc/nls.texi
+++ b/doc/nls.texi
@@ -230,11 +230,11 @@ up-to-date matrix with full percentage details can be found at
 
 If you are writing a freely available program and want to
 internationalize it you are welcome to use GNU @file{gettext} in your
-package.  Of course the GNU Public License applies to your sources from
-then if you include @code{gettext} directly in your distribution on but
+package.  Of course the GNU General Public License applies to your sources
+from then on if you include @code{gettext} directly in your distribution but
 since you are writing free software anyway this is no restriction.
 
-Once the sources are change appropriately and the setup can handle to
+Once the sources are changed appropriately and the setup can handle to
 use of @code{gettext} the only thing missing are the translations.  The
 Free Translation Project is also available for packages which are not
 developed inside the GNU project.  Therefore the information given above
