Change canonical names of two charsets.

--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,12 @@
+2001-06-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* config.charset: Change canonical name of BIG5HKSCS to BIG5-HKSCS.
+	Change canonical name of SJIS to SHIFT_JIS.
+
+2001-06-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* mbswidth.c (mbsinit): Define to 1 if not defined. For SCO 3.2v5.0.2.
+
 2001-04-30  Bruno Haible  <haible@clisp.cons.org>
 
 	Silence "gcc -Wall -Wwrite-strings" warnings.
