--- a/m4/ChangeLog
+++ b/m4/ChangeLog
@@ -2,6 +2,10 @@
 
 	* gettext.m4 (AM_WITH_NLS): Add support for autoconf-2.50.
 
+2001-06-08  Bruno Haible  <haible@clisp.cons.org>
+
+	* libtool.m4: Upgrade to libtool-1.4.
+
 2001-05-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.m4 (AM_WITH_NLS): Look only for GNU msgfmt and GNU xgettext.
