--- a/misc/ChangeLog
+++ b/misc/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* po-mode.el (po-find-file-coding-system): Make it work in XEmacs 20
+	as well. Based on a patch by Enrico Scholz
+	<enrico.scholz@informatik.tu-chemnitz.de>.
+
 2001-05-23  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.38 released.
