--- a/misc/ChangeLog
+++ b/misc/ChangeLog
@@ -1,3 +1,8 @@
+2001-07-01  Bruno Haible  <haible@clisp.cons.org>
+
+	* po-mode.el (po-content-type-charset-alist): Add entries for
+	ISO-8859-15, GB2312, EUC-JP, EUC-KR, BIG5, SHIFT_JIS, TIS-620, VISCII.
+
 2001-06-25  Bruno Haible  <haible@clisp.cons.org>
 
 	* po-mode.el (po-find-file-coding-system): Make it work in XEmacs 20
