--- a/misc/ChangeLog
+++ b/misc/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-11  Bruno Haible  <haible@clisp.cons.org>
+
+	* po-mode.el (po-default-file-header): Replace 8-bit with 8bit.
+
 2001-07-01  Bruno Haible  <haible@clisp.cons.org>
 
 	* po-mode.el (po-content-type-charset-alist): Add entries for
