--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext-0.10.39 released.
+
 2001-06-08  Bruno Haible  <haible@clisp.cons.org>
 
 	* ltmain.sh: Upgrade to libtool-1.4.
