--- a/m4/ChangeLog
+++ b/m4/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext-0.10.39 released.
+
 2001-06-25  Bruno Haible  <haible@clisp.cons.org>
 
 	* mbswidth.m4: Also check for mbsinit. Needed for SCO 3.2v5.0.2.
