--- a/misc/ChangeLog
+++ b/misc/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext-0.10.39 released.
+
 2001-07-11  Bruno Haible  <haible@clisp.cons.org>
 
 	* po-mode.el (po-default-file-header): Replace 8-bit with 8bit.
