--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext-0.10.39 released.
+
 2001-06-25  Bruno Haible  <haible@clisp.cons.org>
 
 	* no.po: Update from Trond Endrestøl <endrestol@hotmail.com>.
