--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-29  Bruno Haible  <haible@clisp.cons.org>
+
+	* gl.po: Update from Jesús Bravo Álvarez <jba@pobox.com>.
+
 2001-07-24  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.39 released.
