--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* cs.po: Update from Vladimir Michl <Vladimir.Michl@seznam.cz>.
+
 2001-07-29  Bruno Haible  <haible@clisp.cons.org>
 
 	* gl.po: Update from Jesús Bravo Álvarez <jba@pobox.com>.
