--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2001-08-31  Bruno Haible  <haible@clisp.cons.org>
 
+	* da.po: Update from <olau@hardworking.dk>
+
+2001-08-31  Bruno Haible  <haible@clisp.cons.org>
+
 	* da.po: Update from Keld Simonsen <keld@dkuug.dk>.
 
 2001-08-20  Bruno Haible  <haible@clisp.cons.org>
