--- a/po/da.po
+++ b/po/da.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GNU gettext 0.10.39\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 2001-08-31 17:32+0200\n"
+"PO-Revision-Date: 2001-09-04 17:32+0200\n"
 "Last-Translator: Keld Simonsen <keld@dkuug.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -851,7 +851,7 @@ msgid ""
 "Charset missing in header.\n"
 "Message conversion to user's charset will not work.\n"
 msgstr ""
-"Tehnsæt manngler i hoved.\n"
+"Tegnsæt mangler i hoved.\n"
 "Tekstkonvertering til brugers tegnsæt vil ikke virke.\n"
 
 #: src/write-po.c:322
