--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-08  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.texi (Discussions): Rewrote the paragraph about GPL.
+	* nls.texi (Using gettext in own code): Adapt for libintl license
+	change.
+
 2001-07-24  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.39 released.
