--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-13  Bruno Haible  <haible@clisp.cons.org>
+
+	* config.guess, config.sub: Update to GNU version 2001-09-13.
+
 2001-07-24  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.39 released.
