--- a/intl/ChangeLog
+++ b/intl/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-11  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale.alias: Use he language code for hebrew, not iw.
+
 2001-09-01  Bruno Haible  <haible@clisp.cons.org>
 
 	* *.h, *.c, *.y, Makefile.in: Change copyright notice from GPL to LGPL.
