--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
 
+	* configure.in: Bump version number to 0.10.40.
+	(RELEASE_DATE): Bump.
+
 	* config.guess, config.sub: Update to GNU version 2001-09-13.
 
 2001-07-24  Bruno Haible  <haible@clisp.cons.org>
