Update from Karl Eichwalder.

--- a/po/de.po
+++ b/po/de.po
@@ -9,9 +9,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext 0.10.38\n"
+"Project-Id-Version: GNU gettext 0.10.39\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 2001-05-30 09:34-04:00\n"
+"PO-Revision-Date: 2001-08-16 07:08+0200\n"
 "Last-Translator: Karl Eichwalder <ke@suse.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -133,7 +133,7 @@ msgid ""
 "  [TEXTDOMAIN] MSGID        retrieve translated message corresponding\n"
 "                            to MSGID from TEXTDOMAIN\n"
 msgstr ""
-"Benutzung: %s [OPTION] [[[TEXTBEREICH] SCHLÜSSEL] | [-s [MSGID]...]]\n"
+"Aufruf: %s [OPTION] [[[TEXTBEREICH] SCHLÜSSEL] | [-s [MSGID]...]]\n"
 "  -d, --domain=TEXTBEREICH   Übersetzungen kommen aus TEXTBEREICH\n"
 "  -e                         Übersetzung von Sonderzeichendarstellung\n"
 "                               anschalten\n"
@@ -201,7 +201,7 @@ msgid ""
 "translated each and every message in your program.  Where an exact match\n"
 "cannot be found, fuzzy matching is used to produce better diagnostics.\n"
 msgstr ""
-"Benutzung: %s [OPTION] Datei1.po Def.po Ref.po\n"
+"Aufruf: %s [OPTION] Datei1.po Def.po Ref.po\n"
 "\n"
 "Notwendige Argumente für Optionen in Langform sind auch für die Kurzform\n"
 "notwendig.\n"
@@ -290,7 +290,7 @@ msgid ""
 "  -F, --sort-by-file             sort output by file location\n"
 "  -h, --help                     display this help and exit\n"
 msgstr ""
-"Benutzung: %s [OPTION] EINGABEDATEI ...\n"
+"Aufruf: %s [OPTION] EINGABEDATEI ...\n"
 "\n"
 "Notwendige Argumente für Optionen in Langform sind auch für die Kurzform\n"
 "notwendig.\n"
@@ -441,7 +441,7 @@ msgid ""
 "If input file is -, standard input is read.  If output file is -,\n"
 "output is written to standard output.\n"
 msgstr ""
-"Benutzung: %s [OPTION] Dateiname.po ...\n"
+"Aufruf: %s [OPTION] Dateiname.po ...\n"
 "Binäre Dateien mit Meldungen aus der textuellen Beschreibung erzeugen.\n"
 "\n"
 "Notwendige Argumente für Optionen in Langform sind auch für die Kurzform\n"
@@ -589,7 +589,7 @@ msgid ""
 "  -V, --version               output version information and exit\n"
 "  -w, --width=NUMBER          set output page width\n"
 msgstr ""
-"Benutzung: %s [OPTION] Def.po Ref.po\n"
+"Aufruf: %s [OPTION] Def.po Ref.po\n"
 "\n"
 "Notwendige Argumente für Optionen in Langform sind auch für die Kurzform\n"
 "notwendig.\n"
@@ -668,7 +668,7 @@ msgid ""
 "  -V, --version            output version information and exit\n"
 "  -w, --width=NUMBER       set output page width\n"
 msgstr ""
-"Benutzung: %s [OPTION] [DATEI]...\n"
+"Aufruf: %s [OPTION] [DATEI]...\n"
 "Notwendige Argumente für Optionen in Langform sind auch für die\n"
 "Kurzform notwendig.\n"
 "\n"
@@ -739,7 +739,7 @@ msgid ""
 "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
 "  COUNT                     choose singular/plural form based on this value\n"
 msgstr ""
-"Benutzung: %s [OPTION] [TEXTBEREICH] SCHLÜSSEL SCHLÜSSEL-PLURAL ZAHL\n"
+"Aufruf: %s [OPTION] [TEXTBEREICH] SCHLÜSSEL SCHLÜSSEL-PLURAL ZAHL\n"
 "\n"
 "  -d, --domain=TEXTBEREICH     Übersetzungen kommen aus TEXTBEREICH\n"
 "  -e                           Übersetzung von Sonderzeichendarstellung\n"
@@ -965,7 +965,7 @@ msgid ""
 "      --foreign-user             omit FSF copyright in output for foreign user\n"
 "  -F, --sort-by-file             sort output by file location\n"
 msgstr ""
-"Benutzung: %s [OPTION] EINGABEDATEI ...\n"
+"Aufruf: %s [OPTION] EINGABEDATEI ...\n"
 "Aus den Eingabedateien alle zu übersetzenden Meldungen herausschreiben.\n"
 "\n"
 "Notwendige Argumente für Optionen in Langform sind auch für die\n"
