--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
 
+	* gettext-0.10.40 released.
+
+2001-09-13  Bruno Haible  <haible@clisp.cons.org>
+
 	* configure.in: Bump version number to 0.10.40.
 	(RELEASE_DATE): Bump.
 
