--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-13  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext-0.10.40 released.
+
 2001-09-08  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.texi (Discussions): Rewrote the paragraph about GPL.
