--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
 
+	* gettext-0.10.40 released.
+
+2001-09-13  Bruno Haible  <haible@clisp.cons.org>
+
 	* alloca.c (alloca): Replace 'REGISTER' with 'register'.
 	Reported by Len Makin <len@hpc.csiro.au>.
 
