--- a/m4/ChangeLog
+++ b/m4/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
 
+	* gettext-0.10.40 released.
+
+2001-09-13  Bruno Haible  <haible@clisp.cons.org>
+
 	* gettext.m4 (AM_WITH_NLS): Change version determination of bison, so
 	that it also works with bison-1.29.
 	Reported by Karl Berry <karl@gnu.org>.
