--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,11 @@
 
 	* config.guess, config.sub: Update to GNU version 2001-09-13.
 
+2001-07-31  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.am (AUTOMAKE_OPTIONS): Bump to 1.4. Use option 'gnu', not
+	'gnits', to avoid distributing README-alpha.
+
 2001-07-24  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.39 released.
