--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* configure.in (ALL_LINGUAS): Add sk.
+
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.40 released.
