--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-10-20  Bruno Haible  <haible@clisp.cons.org>
 
+	* DISCLAIM: Update from
+	http://www.iro.umontreal.ca/contrib/po/doc/DISCLAIM.
+
+2001-10-20  Bruno Haible  <haible@clisp.cons.org>
+
 	* configure.in (ALL_LINGUAS): Add sk.
 
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
