--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-05  Bruno Haible  <haible@clisp.cons.org>
+
+	* de.po: Update from Karl Eichwalder <ke@suse.de>.
+
 2001-10-20  Bruno Haible  <haible@clisp.cons.org>
 
 	* es.po: Update from Max de Mendizábal <max@upn.mx>.
